<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityC">

    <ImageView
        android:id="@+id/my_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/simon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@android:dimen/app_icon_size"
         />


    <TextView
        android:id="@+id/my_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:textSize="30dp"
        android:gravity="center"
        android:text="@string/name"
        android:layout_below="@id/my_image"
        />

    <View
        android:id="@+id/view_hr"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
        android:layout_below="@id/my_name"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/textView_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/track"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:layout_below="@id/view_hr"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:textSize="20dp"

        />

    <TextView
        android:id="@+id/textView_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:layout_below="@id/textView_track"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@id/textView_country"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/textView_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_email"
        android:text="@string/phone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:textSize="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@id/textView_phone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:textSize="20dp"/>



</RelativeLayout>